--- a/app/src/main/res/layout/personlinfo_frag.xml
+++ b/app/src/main/res/layout/personlinfo_frag.xml
@@ -4,11 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="first"
-        android:textSize="60sp"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <RelativeLayout
+        android:layout_marginTop="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/exec_text"
+            android:clickable="true"
+            android:drawableLeft="@drawable/question"
+            android:drawablePadding="5dp"
+            android:textSize="16sp"
+            android:layout_marginLeft="45dp"
+            android:text="设置锻炼计划"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/history_tx"
+            android:drawableLeft="@drawable/history"
+            android:drawablePadding="5dp"
+            android:clickable="true"
+            android:textSize="16sp"
+            android:layout_marginRight="45dp"
+            android:layout_alignParentRight="true"
+            android:text="查看历史路程"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+    <com.n1njac.yiqipao.android.view.ArcView
+        android:id="@+id/arc_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 </RelativeLayout>
