增加头像的更换功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="sienna">#FF8247</color>
     <color name="text">#D88700</color>
     <color name="text2">#CB272C</color>
+    <color name="bg">#9000</color>
 </resources>
