--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -7,6 +7,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/icon_image"
         android:src="@drawable/icon"
+        android:clickable="true"
         android:layout_centerInParent="true"
         android:layout_width="70dp"
         android:layout_height="70dp" />
