--- a/app/src/main/res/layout/run_frag.xml
+++ b/app/src/main/res/layout/run_frag.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/colorPrimary"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/runzz"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:text="third"
-        android:textSize="60sp"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <at.markushi.ui.CircleButton
+        android:id="@+id/circle_btn"
+        app:cb_color="#aa00BFFF"
+        android:layout_marginBottom="30dp"
+        app:cb_pressedRingWidth="10dip"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
 
 </RelativeLayout>
