修改自定义view

--- a/app/src/main/res/layout/personal_run_frag.xml
+++ b/app/src/main/res/layout/personal_run_frag.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,6 +39,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
+    <TextView
+        android:id="@+id/remind_tx"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        android:text="加油！快完成今天的目标啦：）"
+        android:textSize="20sp"
+        android:layout_alignBottom="@id/arc_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 </RelativeLayout>
