--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!--<com.n1njac.yiqipao.android.IndexViewPager-->
+            <!--android:id="@+id/view_pager"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1">-->
+
+        <!--</com.n1njac.yiqipao.android.IndexViewPager>-->
+
+        <!--<android.support.design.widget.TabLayout-->
+
+            <!--android:id="@+id/tab_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="#fff"-->
+            <!--app:tabGravity="fill"-->
+            <!--app:tabIndicatorHeight="0dp"-->
+            <!--app:tabMode="fixed"-->
+            <!--app:tabSelectedTextColor="#ff7a61">-->
+        <!--</android.support.design.widget.TabLayout>-->
 
 
 
-        <com.n1njac.yiqipao.android.IndexViewPager
-            android:id="@+id/view_pager"
+        <FrameLayout
+            android:id="@+id/frag_layout"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="0dp"></com.n1njac.yiqipao.android.IndexViewPager>
+            android:layout_height="0dp">
+            <com.ashokvarma.bottomnavigation.BottomNavigationBar
+                android:id="@+id/bottom_bar"
+                android:layout_gravity="bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.ashokvarma.bottomnavigation.BottomNavigationBar>
 
-        <android.support.design.widget.TabLayout
+        </FrameLayout>
 
-            android:id="@+id/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabIndicatorHeight="0dp"
-            android:background="#fff"
-            app:tabSelectedTextColor="#ff7a61"
-            app:tabMode="fixed"
-            app:tabGravity="fill"></android.support.design.widget.TabLayout>
+
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_item"
-        android:layout_gravity="start"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.design.widget.NavigationView>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_item">
+
+    </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
