--- a/app/src/main/res/layout/personal_info_frag.xml
+++ b/app/src/main/res/layout/personal_info_frag.xml
@@ -48,6 +48,7 @@
     <RelativeLayout
 
         android:padding="15dp"
+        android:layout_marginBottom="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
