--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,14 @@
     <color name="inSideCircle">#00FA9A</color>
 
 
+    <color name="orange">#FFA500</color>
+    <color name="blue">#1E90FF</color>
+    <color name="green">#ADFF2F</color>
+    <color name="gray">	#BEBEBE</color>
+
+
+
+
 
     <drawable name="window_bg">#fff5f5f5</drawable>
     <drawable name="divider_line">#d9d9d9</drawable>
