修复从跑步界面返回主activity 的问题

--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:background="#99CCFF">
+    android:background="#00BFFF">
 
     <TextView
         android:layout_width="match_parent"
