--- a/app/src/main/res/layout/about_main.xml
+++ b/app/src/main/res/layout/about_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="开始扫描"
-        android:id="@+id/start_nearby_btn"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_centerInParent="true"
+        android:text="关于app"
+        android:textSize="50sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
