--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,9 +21,8 @@
     <color name="green">#ADFF2F</color>
     <color name="gray">	#BEBEBE</color>
 
-
-
-
+    <color name="bg_color_blue">#43D5FF</color>
+    <color name="bg_color_pink">#FF90A2</color>
 
     <drawable name="window_bg">#fff5f5f5</drawable>
     <drawable name="divider_line">#d9d9d9</drawable>
