--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="gray">	#BEBEBE</color>
 
     <color name="bg_color_blue">#43D5FF</color>
+    <color name="bg_color_blue_press">#008B8B</color>
     <color name="bg_color_pink">#FF90A2</color>
 
     <drawable name="window_bg">#fff5f5f5</drawable>
