--- a/app/src/main/res/layout/fragment_trackquery.xml
+++ b/app/src/main/res/layout/fragment_trackquery.xml
@@ -25,24 +25,24 @@
         android:text="@string/select_date"
         android:textColor="#000000" />
 
-    <Button
-        android:id="@+id/btn_isprocessed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/btn_date"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dip"
-        android:background="#FFFFFF"
-        android:text="@string/is_processed"
-        android:textColor="#000000" />
+    <!--<Button-->
+        <!--android:id="@+id/btn_isprocessed"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_below="@+id/btn_date"-->
+        <!--android:layout_marginRight="15dp"-->
+        <!--android:layout_marginTop="10dip"-->
+        <!--android:background="#FFFFFF"-->
+        <!--android:text="@string/is_processed"-->
+        <!--android:textColor="#000000" />-->
 
     <Button
         android:id="@+id/btn_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/btn_isprocessed"
+        android:layout_below="@+id/btn_date"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dip"
         android:background="#FFFFFF"
