--- a/app/src/main/res/layout/nearby_frag.xml
+++ b/app/src/main/res/layout/nearby_frag.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#00BFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="开始扫描"
-        android:id="@+id/start_nearby_btn"
+    <com.github.ybq.android.spinkit.SpinKitView
+        style="@style/SpinKitView.Small.Pulse"
+        app:SpinKit_Color="@color/colorAccent"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/start_nearby_btn"
+        android:background="#00000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
