--- a/app/src/main/res/menu/nav_item.xml
+++ b/app/src/main/res/menu/nav_item.xml
@@ -2,21 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/first_item"
-            android:icon="@drawable/info"
-            android:title="@string/person_info"/>
+
         <item
             android:id="@+id/second_item"
-            android:icon="@drawable/behance"
+            android:icon="@drawable/plan_z"
             android:title="@string/exe_plan"/>
         <item
             android:id="@+id/third_item"
-            android:icon="@drawable/etsy"
+            android:icon="@drawable/distance_z"
             android:title="历史记录"/>
         <item
             android:id="@+id/about_item"
-            android:icon="@drawable/dropbox"
+            android:icon="@drawable/about"
             android:title="@string/about_app" />
     </group>
 </menu>
