增加登陆注册ui

--- a/app/src/main/res/drawable/btn_status_selector.xml
+++ b/app/src/main/res/drawable/btn_status_selector.xml
@@ -8,7 +8,7 @@
     </item>
 
     <item
-        android:drawable="@drawable/btn_nomal">
+        android:drawable="@drawable/btn_normal">
 
     </item>
 
