--- a/app/src/main/res/menu/nav_item.xml
+++ b/app/src/main/res/menu/nav_item.xml
@@ -10,10 +10,21 @@
         <item
             android:id="@+id/third_item"
             android:icon="@drawable/distance_z"
-            android:title="历史记录"/>
+            android:title="@string/history_distance"/>
         <item
             android:id="@+id/about_item"
             android:icon="@drawable/about"
             android:title="@string/about_app" />
     </group>
+
+
+    <item android:title="@string/setting_item">
+        <menu>
+            <item
+                android:icon="@drawable/switch_item"
+                android:id="@+id/switch_item"
+                android:title="@string/switch_item"/>
+        </menu>
+    </item>
+
 </menu>
