--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,8 @@
     <color name="bg_transparent">#00000000</color>
     <color name="text_white">#FFF</color>
 
+    <color name="get_verification_code_tx_no_click">#6600BFFF</color>
+
 
     <drawable name="window_bg">#fff5f5f5</drawable>
     <drawable name="divider_line">#d9d9d9</drawable>
