--- a/app/src/main/res/drawable/btn_register_submit.xml
+++ b/app/src/main/res/drawable/btn_register_submit.xml
@@ -3,10 +3,10 @@
 
     <item
         android:drawable="@drawable/btn_noclick"
-        android:state_focused="false"/>
+        android:state_enabled="false"/>
 
     <item
-        android:drawable="@drawable/btn_login"
-        android:state_focused="true"/>
+        android:state_enabled="true"
+        android:drawable="@drawable/btn_login"/>
 
 </selector>
