--- a/app/src/main/res/layout/register_frag.xml
+++ b/app/src/main/res/layout/register_frag.xml
@@ -130,7 +130,7 @@
     </LinearLayout>
 
     <Button
-        android:focusable="false"
+        android:enabled="false"
         android:id="@+id/register_submit_btn"
         android:text="@string/register_btn_submit"
         android:textColor="@color/text_white"
