--- a/app/src/main/res/layout/new_login_frag.xml
+++ b/app/src/main/res/layout/new_login_frag.xml
@@ -10,7 +10,7 @@
         android:layout_height="?actionBarSize">
         <ImageButton
 
-            android:id="@+id/login_back_btn"
+            android:id="@+id/new_login_back_btn"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_centerVertical="true"
@@ -39,5 +39,154 @@
     </RelativeLayout>
 
 
+    <LinearLayout
+        android:id="@+id/new_login_content_linear"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:background="@null"
+                android:id="@+id/login_account_et"
+                android:textColor="#fff"
+                android:hint="@string/new_login_account_et"
+                android:textCursorDrawable ="@null"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColorHint="#bfbfbf"
+                android:textSize="14sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:drawableLeft="@drawable/et_account"
+                android:drawablePadding="10dp"
+                android:inputType="phone" />
+
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="13dp"
+                android:background="#fff"
+                android:layout_width="match_parent"
+                android:layout_height="1px" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:background="@null"
+                android:id="@+id/new_login_password_et"
+                android:textColor="#fff"
+                android:hint="@string/new_login_psd_et"
+                android:textCursorDrawable ="@null"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColorHint="#bfbfbf"
+                android:textSize="14sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:drawableLeft="@drawable/et_password"
+                android:drawablePadding="10dp"
+                android:inputType="textPassword" />
+
+            <ImageView
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="13dp"
+                android:background="#fff"
+                android:layout_width="match_parent"
+                android:layout_height="1px" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/new_login_btn"
+            android:text="@string/new_login_tv"
+            android:textSize="14sp"
+            android:textColor="@color/text_white"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/btn_login"
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RelativeLayout
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/new_login_forget_pwd_tv"
+                android:layout_alignParentStart="true"
+                android:text="@string/forget_pwd_tv"
+                android:textColor="#bfbfbf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/new_login_quick_login_tv"
+                android:layout_alignParentEnd="true"
+                android:text="@string/quick_login_tv"
+                android:textColor="#bfbfbf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:layout_below="@id/new_login_content_linear"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginRight="75dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_alignParentStart="true"
+            android:src="@drawable/qq"
+            android:layout_width="42dp"
+            android:layout_height="42dp" />
+
+        <ImageView
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/wechat"
+            android:layout_width="42dp"
+            android:layout_height="42dp" />
+        <ImageView
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/sina"
+            android:layout_width="42dp"
+            android:layout_height="42dp" />
+
+    </RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/new_login_goto_register_tv"
+        android:textSize="12sp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/goto_register_tv"
+        android:textColor="#bfbfbf"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
